# rabbitmq-tutorials

./: .gitignore  .travis.yml  AGENTS.md  LICENSE.txt  Makefile  README.md  github.yml  readme.txt  test.py  travisci.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
C/: Makefile  README.md  emit_log.c  emit_log_direct.c  emit_log_topic.c  new_task.c  receive.c  receive_logs.c  receive_logs_direct.c  receive_logs_topic.c  rpc_client.c  rpc_server.c  send.c  worker.c
_tools/: Gemfile  Makefile  README  mdxto
clojure/: .gitignore  README  README.md  project.clj
common-lisp/: README.md  emit-log-direct.lisp  emit-log-topic.lisp  emit-log.lisp  new-task.lisp  receive-logs-direct.lisp  receive-logs-topic.lisp  receive-logs.lisp  receive.lisp  rpc-client.lisp  rpc-server.lisp  send.lisp  worker.lisp
cpp/: CMakeLists.txt  README.md  emit_log.cpp  emit_log_direct.cpp  emit_log_topic.cpp  new_task.cpp  publisher_confirms.cpp  receive.cpp  receive_logs.cpp  receive_logs_direct.cpp  receive_logs_topic.cpp  rmqcpp  rpc_client.cpp  rpc_server.cpp  send.cpp  vcpkg.json  worker.cpp
dart/: README.md  emit_log.dart  emit_log_direct.dart  emit_log_topic.dart  new_task.dart  pubspec.yaml  receive.dart  receive_logs.dart  receive_logs_direct.dart  receive_logs_topic.dart  rpc_client.dart  rpc_server.dart  send.dart  worker.dart
dotnet/: .gitattributes  .gitignore  AGENTS.md  EmitLog.cs  EmitLogDirect.cs  EmitLogTopic.cs  NewTask.cs  README.md  RPCClient.cs  RPCServer.cs  Receive.cs  ReceiveLogs.cs  ReceiveLogsDirect.cs  ReceiveLogsTopic.cs  Receiver  Send.cs  Worker.cs  dotnet.sln  recompile.bat  recompile.sh  update.ps1
dotnet-6/: README.md  dotnet-7.sln  recompile.bat  recompile.ps1  recompile.sh
dotnet-amqp/: .gitattributes  .gitignore  README.md  dotnet-amqp.sln  test-tutorials.sh
dotnet-stream/: .gitignore  README.md  dotnet-stream.sln
dotnet-visual-studio/: .gitignore  README.md  RabbitMQ.Tutorials.sln
elixir/: .gitignore  README.md  emit_log.exs  emit_log_direct.exs  emit_log_topic.exs  mix.exs  new_task.exs  receive.exs  receive_logs.exs  receive_logs_direct.exs  receive_logs_topic.exs  rpc_client.exs  rpc_server.exs  send.exs  worker.exs
elixir-stream/: README.md  consume.exs  publish.exs
erlang/: .gitignore  Makefile  README.md  emit_log.erl  emit_log_direct.erl  emit_log_topic.erl  erlang.mk  new_task.erl  rebar.config  receive.erl  receive_logs.erl  receive_logs_direct.erl  receive_logs_topic.erl  send.erl  worker.erl
fsharp/: 1_RabbitMQSend.fsx  1_Receive.fsx  2_RabbitMWNewTask.fsx  2_Worker.fsx  3_EmitLog.fsx  3_ReceiveLogs.fsx  4_EmitLogDirect.fsx  4_ReceiveLogsDirect.fsx  5_EmitLogTopic.fsx  5_ReceiveLogsTopic.fsx  6_RPCClient.fsx  6_RPCServer.fsx  README.md  paket.dependencies
go/: .gitignore  README.md  emit_log.go  emit_log_direct.go  emit_log_topic.go  fail.go  go.mod  go.sum  go.work  new_task.go  publisher_confirms.go  receive.go  receive_logs.go  send.go  (+6 more)
go-amqp/: .gitignore  README.md  emit_log.go  emit_log_direct.go  emit_log_topic.go  go.mod  go.sum  new_task.go  publisher_confirms.go  receive.go  receive_logs.go  receive_logs_direct.go  receive_logs_topic.go  rpc_amqp10.go  rpc_client.go  rpc_server.go  send.go  test-tutorials.sh  worker.go
go-stream/: README.md  go.mod  go.sum  offset_tracking_receive.go  offset_tracking_send.go  receive.go  send.go
rust/: .gitignore  Cargo.toml  README.md
rust-stream/: Cargo.toml  README.md
rust/01-hello-world/: Cargo.toml
rust/02-work-queues/: Cargo.toml
rust/03-publish-subscribe/: Cargo.toml
rust/04-routing/: Cargo.toml
rust/05-topics/: Cargo.toml
(+756 files in other folders)
