[package]
name = "rust-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rabbitmq-stream-client = "0.4.4"
tokio = { version = "1.43.1", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3.30"
