[package]
name = "rabbitmq-tutorials"
version = "1.0.0"
authors = ["Michal Malek <michalm@fastmail.fm>"]
edition = "2018"

[dependencies]
futures = "0.3.7"
lapin = "1.5"
tokio = { version = "0.3.3", features = ["macros", "rt-multi-thread", "stream"] }
uuid = { version = "0.8.1", features = ["v4"] }
